[gd_scene load_steps=5 format=3 uid="uid://d3pv4rqlo3xh7"]

[ext_resource type="Script" path="res://components/behaviors/attackandwanderbehaviorcomponent/AttackAndWanderBehaviorComponent.gd" id="1_hil3r"]
[ext_resource type="PackedScene" uid="uid://cnj2i4x6kdm4c" path="res://components/behaviors/components/wandercomponent/WanderComponent.tscn" id="2_u2qbf"]
[ext_resource type="PackedScene" uid="uid://dv6a22n6h5bly" path="res://components/behaviors/components/avoidancerayscomponent/AvoidanceRaysComponent.tscn" id="3_pre5k"]
[ext_resource type="PackedScene" uid="uid://bf5e7if2bids" path="res://components/behaviors/components/aggrocomponent/AggroComponent.tscn" id="4_0w2bs"]

[node name="AttackAndWanderBehaviorComponent" type="Node2D"]
script = ExtResource("1_hil3r")

[node name="AvoidanceRaysComponent" parent="." instance=ExtResource("3_pre5k")]

[node name="WanderComponent" parent="." instance=ExtResource("2_u2qbf")]

[node name="AggroComponent" parent="." instance=ExtResource("4_0w2bs")]
